# lodestar

./: .dockerignore  .env.example  .gitignore  DEMO.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SB1_AI_Personal_Financial_Coach.md  docker-compose.yml  pyproject.toml
.claude/agents/: codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md
.claude/commands/: create_plan.md  create_plan_generic.md  create_plan_nt.md  research_codebase.md  research_codebase_generic.md  research_codebase_nt.md
docs/: 01-problem-and-market.md  02-solution-overview.md  03-architecture.md  04-orchestrator.md  05-agent-design.md  06-proactive-feed-ux.md  07-digital-twin.md  08-life-event-detection.md  09-learning-loop.md  10-data-and-integration.md  11-visualisation.md  12-technology-stack.md  13-regulatory.md  14-poc-scope.md  15-scale-up.md  16-innovation.md  17-references.md  README.md
frontend/: package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: app-shell.tsx  bottom-nav.tsx  chart-renderer.tsx  customer-hero.tsx  demo-panel.tsx  drill-down-chat.tsx  goals-view.tsx  insight-card.tsx  insight-feed.tsx  language-toggle.tsx  layout-toggle.tsx  memory-panel.tsx  product-search.tsx  recent-transactions.tsx  scenario-simulator.tsx  severity.tsx  theme-toggle.tsx
frontend/src/lib/: api.ts  format.ts  i18n.tsx  layout-mode.tsx  types.ts  use-sse.ts
plans/: 2026-04-03-sb1-financial-coach-poc.md
src/lodestar/: api.py  config.py  database.py  i18n.py
src/lodestar/agents/: background.py  compliance.py  detector.py  orchestrator.py  translate.py  triggers.py
src/lodestar/data/: products_catalogue.json  seed_data.py  synthetic.py
src/lodestar/learning/: cohort.py  interactions.py  journal.py  reflection.py
src/lodestar/models/: __init__.py  customer.py  insight.py  learning.py  products.py
src/lodestar/rag/: embeddings.py  indexer.py  retriever.py
src/lodestar/tools/: charts.py  goals.py  products.py  simulation.py  spending.py
src/qwen_viet/: api.py  config.py  database.py
src/qwen_viet/agents/: background.py  compliance.py  orchestrator.py  triggers.py
src/qwen_viet/data/: products_catalogue.json  seed_data.py
src/qwen_viet/learning/: cohort.py  journal.py  reflection.py
tests/: test_api.py  test_learning.py  test_products.py  test_rag.py  test_tools.py  test_triggers.py  test_workflows.py
(+22 files in other folders)
