[project]
name = "lodestar"
version = "0.1.0"
description = "Lodestar — AI Personal Financial Coach for Shinhan SOL Vietnam (Innoboost 2026)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Agent framework
    "qwen-agent>=0.0.14",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",  # AsyncSqliteSaver for workflow checkpointing
    "langchain-core>=0.3",

    # LLM client
    "openai>=1.60",

    # Backend API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",

    # Vector DB + Embeddings
    "qdrant-client>=1.13",
    "sentence-transformers>=3.4",   # bge-m3 embedding (FlagEmbedding has transformers version conflicts)

    # Database
    "aiosqlite>=0.20",

    # Data processing
    "pandas>=2.2",
    "numpy>=2.0",
    "numpy-financial>=1.0",

    # Synthetic data
    "sdv>=1.18",
    "faker>=33.0",

    # Frontend is Next.js + shadcn/ui (separate package.json)
    # plotly kept for backend chart spec generation in tests
    "plotly>=6.0",

    # Vietnamese NLP
    "underthesea>=6.8",

    # Utilities
    "httpx>=0.28",
    "structlog>=24.4",
    "json5>=0.9",                   # Used by qwen-agent tool call parsing (also transitive dep)
    "openpyxl>=3.1.5",             # Excel file reading (use case data ingestion)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
fine-tuning = [
    "ms-swift[llm]>=3.0",          # Alibaba ModelScope — native Qwen3 LoRA/QLoRA support
    "transformers>=4.51",           # Required for Qwen3 — earlier versions break silently
    "peft>=0.14",                   # LoRA / QLoRA adapters
    "datasets>=3.0",               # HuggingFace dataset loading
    "accelerate>=1.2",             # Multi-GPU / mixed precision
    "bitsandbytes>=0.45",          # 4-bit QLoRA quantisation
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lodestar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
target-version = "py311"
